ejson.c

#line 1 "ejson.rl"
/*
 * IF YOU ARE LOOKING AT A .c FILE, YOUR ARE LOOKING AT THE WRONG ONE
 *
 * The .c file is autogenerated from a .rl source file for 'ragel'
 * parser generator.
 */
/*
	This file is part of libejson.

	(C) 2010 Michel Pollet <buserror@gmail.com>

	libejson is free software: you can redistribute it and/or modify
	it under the terms of the GNU Lesser General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	libejson is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU Lesser General Public License for more details.

	You should have received a copy of the GNU Lesser General Public License
	along with libejson.  If not, see <http://www.gnu.org/licenses/>.
 */

#include <stdlib.h>
#include <string.h>
#include <stdio.h>

#include "ejson.h"


#line 36 "ejson.c"
static const char _ejson_str_eof_actions[] = {
	0, 0, 0, 0, 0, 0, 0, 11, 
	13, 15, 17, 19, 21, 23, 25, 0
};

static const int ejson_str_start = 6;
static const int ejson_str_first_final = 6;
static const int ejson_str_error = 0;

static const int ejson_str_en_main = 6;


#line 35 "ejson.rl"


static char * ejson_append_utf8_glyph(
	char * dst,
	unsigned long inUnicode )
{
	if (!(inUnicode & ~0x7f)) {
		*dst++ = ((char)inUnicode);
		return dst;	// that was easy
	}
	unsigned char *cur = (unsigned char*)dst;

	unsigned long currentMask = ~0x7ff;
	int bits = 6;
	int header = 5;

	while ((inUnicode & currentMask) && bits <= 24) {
		currentMask = currentMask << 6;
		bits += 6; header--;
	}
	*cur++ = (0xfe << header) | (unsigned char)(inUnicode >> (bits));
	bits -= 6;
	while (bits >= 0) {
		*cur++ = 0x80 | ((unsigned char)(inUnicode >> bits) & 0x3f);
		bits -= 6;
	}
	return (char*)cur;
}

int ejson_parse_string(const char * str, const char *end, char * out)
{
	const char *p = str, *pe = end ? end : str + strlen( str ), *eof = pe;
	int cs;
	out = out ? out : (char*)str;
	uint16_t u = 0;
	
#line 86 "ejson.c"
	{
	cs = ejson_str_start;
	}

#line 91 "ejson.c"
	{
	if ( p == pe )
		goto _test_eof;
	if ( cs == 0 )
		goto _out;
_resume:
	switch ( cs ) {
case 6:
	if ( (*p) == 92 )
		goto tr23;
	goto tr22;
case 1:
	switch( (*p) ) {
		case 34: goto tr1;
		case 92: goto tr2;
		case 98: goto tr3;
		case 102: goto tr4;
		case 110: goto tr5;
		case 114: goto tr6;
		case 116: goto tr7;
		case 117: goto tr8;
	}
	goto tr0;
case 7:
	if ( (*p) == 92 )
		goto tr25;
	goto tr24;
case 8:
	if ( (*p) == 92 )
		goto tr27;
	goto tr26;
case 9:
	if ( (*p) == 92 )
		goto tr29;
	goto tr28;
case 10:
	if ( (*p) == 92 )
		goto tr31;
	goto tr30;
case 11:
	if ( (*p) == 92 )
		goto tr33;
	goto tr32;
case 12:
	if ( (*p) == 92 )
		goto tr35;
	goto tr34;
case 13:
	if ( (*p) == 92 )
		goto tr37;
	goto tr36;
case 14:
	if ( (*p) == 92 )
		goto tr39;
	goto tr38;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr9;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr12;
	} else
		goto tr11;
	goto tr10;
case 0:
	goto _out;
case 3:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr13;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr15;
	} else
		goto tr14;
	goto tr10;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr16;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr18;
	} else
		goto tr17;
	goto tr10;
case 5:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr19;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr21;
	} else
		goto tr20;
	goto tr10;
case 15:
	if ( (*p) == 92 )
		goto tr23;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr40;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr42;
	} else
		goto tr41;
	goto tr22;
	}

	tr10: cs = 0; goto _again;
	tr23: cs = 1; goto _again;
	tr25: cs = 1; goto f10;
	tr27: cs = 1; goto f12;
	tr29: cs = 1; goto f14;
	tr31: cs = 1; goto f16;
	tr33: cs = 1; goto f18;
	tr35: cs = 1; goto f20;
	tr37: cs = 1; goto f22;
	tr39: cs = 1; goto f24;
	tr8: cs = 2; goto _again;
	tr9: cs = 3; goto f0;
	tr11: cs = 3; goto f1;
	tr12: cs = 3; goto f2;
	tr13: cs = 4; goto f3;
	tr14: cs = 4; goto f4;
	tr15: cs = 4; goto f5;
	tr16: cs = 5; goto f3;
	tr17: cs = 5; goto f4;
	tr18: cs = 5; goto f5;
	tr22: cs = 6; goto f9;
	tr24: cs = 6; goto f11;
	tr26: cs = 6; goto f13;
	tr28: cs = 6; goto f15;
	tr30: cs = 6; goto f17;
	tr32: cs = 6; goto f19;
	tr34: cs = 6; goto f21;
	tr36: cs = 6; goto f23;
	tr38: cs = 6; goto f25;
	tr0: cs = 7; goto _again;
	tr1: cs = 8; goto _again;
	tr2: cs = 9; goto _again;
	tr3: cs = 10; goto _again;
	tr4: cs = 11; goto _again;
	tr5: cs = 12; goto _again;
	tr6: cs = 13; goto _again;
	tr7: cs = 14; goto _again;
	tr19: cs = 15; goto f6;
	tr20: cs = 15; goto f7;
	tr21: cs = 15; goto f8;
	tr40: cs = 15; goto f26;
	tr41: cs = 15; goto f27;
	tr42: cs = 15; goto f28;

f3:
#line 74 "ejson.rl"
	{ u = (u << 4) | ((*p) - '0'); }
	goto _again;
f5:
#line 75 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'a' + 0xa); }
	goto _again;
f4:
#line 76 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'A' + 0xa); }
	goto _again;
f9:
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f12:
#line 82 "ejson.rl"
	{ *out++ = '"'; }
	goto _again;
f14:
#line 83 "ejson.rl"
	{ *out++ = '\\'; }
	goto _again;
f24:
#line 84 "ejson.rl"
	{ *out++ = '\t'; }
	goto _again;
f16:
#line 85 "ejson.rl"
	{ *out++ = '\b'; }
	goto _again;
f18:
#line 86 "ejson.rl"
	{ *out++ = '\f'; }
	goto _again;
f20:
#line 87 "ejson.rl"
	{ *out++ = '\n'; }
	goto _again;
f10:
#line 90 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f6:
#line 74 "ejson.rl"
	{ u = (u << 4) | ((*p) - '0'); }
#line 78 "ejson.rl"
	{ out = ejson_append_utf8_glyph(out, u); }
	goto _again;
f8:
#line 75 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'a' + 0xa); }
#line 78 "ejson.rl"
	{ out = ejson_append_utf8_glyph(out, u); }
	goto _again;
f7:
#line 76 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'A' + 0xa); }
#line 78 "ejson.rl"
	{ out = ejson_append_utf8_glyph(out, u); }
	goto _again;
f0:
#line 78 "ejson.rl"
	{ u = 0; }
#line 74 "ejson.rl"
	{ u = (u << 4) | ((*p) - '0'); }
	goto _again;
f2:
#line 78 "ejson.rl"
	{ u = 0; }
#line 75 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'a' + 0xa); }
	goto _again;
f1:
#line 78 "ejson.rl"
	{ u = 0; }
#line 76 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'A' + 0xa); }
	goto _again;
f13:
#line 82 "ejson.rl"
	{ *out++ = '"'; }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f15:
#line 83 "ejson.rl"
	{ *out++ = '\\'; }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f25:
#line 84 "ejson.rl"
	{ *out++ = '\t'; }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f17:
#line 85 "ejson.rl"
	{ *out++ = '\b'; }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f19:
#line 86 "ejson.rl"
	{ *out++ = '\f'; }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f21:
#line 87 "ejson.rl"
	{ *out++ = '\n'; }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f22:
#line 88 "ejson.rl"
	{ *out++ = '\r'; }
#line 90 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f11:
#line 90 "ejson.rl"
	{*out++ = (*p);}
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f26:
#line 74 "ejson.rl"
	{ u = (u << 4) | ((*p) - '0'); }
#line 78 "ejson.rl"
	{ out = ejson_append_utf8_glyph(out, u); }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f28:
#line 75 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'a' + 0xa); }
#line 78 "ejson.rl"
	{ out = ejson_append_utf8_glyph(out, u); }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f27:
#line 76 "ejson.rl"
	{ u = (u << 4) | ((*p) - 'A' + 0xa); }
#line 78 "ejson.rl"
	{ out = ejson_append_utf8_glyph(out, u); }
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;
f23:
#line 88 "ejson.rl"
	{ *out++ = '\r'; }
#line 90 "ejson.rl"
	{*out++ = (*p);}
#line 80 "ejson.rl"
	{*out++ = (*p);}
	goto _again;

_again:
	if ( cs == 0 )
		goto _out;
	if ( ++p != pe )
		goto _resume;
	_test_eof: {}
	if ( p == eof )
	{
	switch ( _ejson_str_eof_actions[cs] ) {
	case 13:
#line 82 "ejson.rl"
	{ *out++ = '"'; }
	break;
	case 15:
#line 83 "ejson.rl"
	{ *out++ = '\\'; }
	break;
	case 25:
#line 84 "ejson.rl"
	{ *out++ = '\t'; }
	break;
	case 17:
#line 85 "ejson.rl"
	{ *out++ = '\b'; }
	break;
	case 19:
#line 86 "ejson.rl"
	{ *out++ = '\f'; }
	break;
	case 21:
#line 87 "ejson.rl"
	{ *out++ = '\n'; }
	break;
	case 11:
#line 90 "ejson.rl"
	{*out++ = (*p);}
	break;
	case 23:
#line 88 "ejson.rl"
	{ *out++ = '\r'; }
#line 90 "ejson.rl"
	{*out++ = (*p);}
	break;
#line 451 "ejson.c"
	}
	}

	_out: {}
	}

#line 100 "ejson.rl"

	*out = 0;

	return 0;
}


#line 466 "ejson.c"
static const short _ejson_eof_actions[] = {
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 24, 0, 0, 0, 24, 0, 
	24, 0, 24, 24, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 61, 
	0, 0, 0, 0, 61, 0, 0, 0, 
	24, 0, 0, 0, 24, 0, 24, 0, 
	24, 24, 0, 0, 61, 61, 61, 61, 
	0, 61, 0, 61, 0, 0, 0, 0, 
	61, 0, 0, 0, 61, 0, 0, 0, 
	61, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	61, 0, 0, 0, 0, 61, 0, 0, 
	0, 24, 0, 0, 0, 24, 0, 24, 
	0, 24, 24, 0, 0, 61, 61, 61, 
	61, 0, 61, 0, 61, 0, 0, 0, 
	0, 61, 0, 0, 0, 61, 0, 0, 
	0, 61, 0, 0, 0, 0, 0, 0, 
	0, 62, 0, 64, 66, 66, 68, 68, 
	70, 0, 72, 74, 76, 0, 0, 0
};

static const int ejson_start = 1;
static const int ejson_first_final = 145;
static const int ejson_error = 0;

static const int ejson_en_skipline = 34;
static const int ejson_en_ejson_value_list = 35;
static const int ejson_en_obj_field_list = 81;
static const int ejson_en_main = 1;


#line 109 "ejson.rl"


int ejson_parse( ejson_driver_t *d, const char * str )
{
	const char *p = str, *pe = str + strlen( str ), *eof = pe;
	int cs;
	int stack[48], top = 0;
	int integer_sign = 0;	// for integer decode
	const char * float_start = NULL;
	ejson_driver_value_t v; // = {0};
	uint32_t b64 = 0;
	int b64_cnt = 0;
	uint8_t * base64 = NULL;
	int base64_hold = 0;
	const char * _value_start = NULL;

	memset(&v, 0, sizeof(v));
	
#line 519 "ejson.c"
	{
	cs = ejson_start;
	top = 0;
	}

#line 525 "ejson.c"
	{
	if ( p == pe )
		goto _test_eof;
	if ( cs == 0 )
		goto _out;
_resume:
	switch ( cs ) {
case 1:
	switch( (*p) ) {
		case 32: goto tr0;
		case 34: goto tr2;
		case 37: goto tr3;
		case 43: goto tr4;
		case 45: goto tr5;
		case 46: goto tr6;
		case 47: goto tr7;
		case 48: goto tr8;
		case 91: goto tr10;
		case 102: goto tr11;
		case 110: goto tr12;
		case 116: goto tr13;
		case 123: goto tr14;
	}
	if ( (*p) > 10 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr9;
	} else if ( (*p) >= 9 )
		goto tr0;
	goto tr1;
case 0:
	goto _out;
case 2:
	switch( (*p) ) {
		case 34: goto tr16;
		case 92: goto tr17;
	}
	goto tr15;
case 3:
	switch( (*p) ) {
		case 34: goto tr19;
		case 92: goto tr20;
	}
	goto tr18;
case 145:
	switch( (*p) ) {
		case 32: goto tr444;
		case 47: goto tr445;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto tr444;
	goto tr443;
case 146:
	switch( (*p) ) {
		case 32: goto tr447;
		case 47: goto tr448;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto tr447;
	goto tr446;
case 4:
	if ( (*p) == 47 )
		goto tr21;
	goto tr1;
case 5:
	if ( (*p) == 92 )
		goto tr20;
	goto tr18;
case 6:
	switch( (*p) ) {
		case 32: goto tr22;
		case 37: goto tr23;
		case 43: goto tr24;
		case 47: goto tr25;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr22;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr28;
		} else if ( (*p) >= 65 )
			goto tr27;
	} else
		goto tr26;
	goto tr1;
case 147:
	switch( (*p) ) {
		case 32: goto tr449;
		case 47: goto tr450;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto tr449;
	goto tr443;
case 7:
	switch( (*p) ) {
		case 43: goto tr29;
		case 47: goto tr30;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr31;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr33;
	} else
		goto tr32;
	goto tr1;
case 8:
	switch( (*p) ) {
		case 43: goto tr34;
		case 47: goto tr35;
		case 61: goto tr37;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr36;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr39;
	} else
		goto tr38;
	goto tr1;
case 9:
	switch( (*p) ) {
		case 43: goto tr40;
		case 47: goto tr41;
		case 61: goto tr43;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr42;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr45;
	} else
		goto tr44;
	goto tr1;
case 10:
	switch( (*p) ) {
		case 32: goto tr47;
		case 37: goto tr48;
		case 43: goto tr49;
		case 47: goto tr50;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr47;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr53;
		} else if ( (*p) >= 65 )
			goto tr52;
	} else
		goto tr51;
	goto tr46;
case 11:
	switch( (*p) ) {
		case 43: goto tr29;
		case 47: goto tr54;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr31;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr33;
	} else
		goto tr32;
	goto tr1;
case 12:
	switch( (*p) ) {
		case 32: goto tr22;
		case 37: goto tr23;
		case 43: goto tr55;
		case 47: goto tr56;
		case 61: goto tr37;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr22;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr59;
		} else if ( (*p) >= 65 )
			goto tr58;
	} else
		goto tr57;
	goto tr1;
case 13:
	switch( (*p) ) {
		case 43: goto tr60;
		case 47: goto tr61;
		case 61: goto tr43;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr62;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr64;
	} else
		goto tr63;
	goto tr1;
case 14:
	switch( (*p) ) {
		case 32: goto tr47;
		case 37: goto tr48;
		case 43: goto tr65;
		case 47: goto tr66;
		case 61: goto tr37;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr47;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr69;
		} else if ( (*p) >= 65 )
			goto tr68;
	} else
		goto tr67;
	goto tr46;
case 15:
	switch( (*p) ) {
		case 43: goto tr60;
		case 47: goto tr70;
		case 61: goto tr43;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr62;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr64;
	} else
		goto tr63;
	goto tr1;
case 16:
	switch( (*p) ) {
		case 32: goto tr47;
		case 37: goto tr48;
		case 43: goto tr71;
		case 47: goto tr72;
		case 61: goto tr37;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr47;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr75;
		} else if ( (*p) >= 65 )
			goto tr74;
	} else
		goto tr73;
	goto tr46;
case 17:
	if ( (*p) == 61 )
		goto tr76;
	goto tr1;
case 18:
	switch( (*p) ) {
		case 32: goto tr77;
		case 37: goto tr78;
		case 43: goto tr79;
		case 47: goto tr80;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr77;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr83;
		} else if ( (*p) >= 65 )
			goto tr82;
	} else
		goto tr81;
	goto tr46;
case 19:
	switch( (*p) ) {
		case 32: goto tr84;
		case 37: goto tr85;
		case 43: goto tr86;
		case 47: goto tr87;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr84;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr90;
		} else if ( (*p) >= 65 )
			goto tr89;
	} else
		goto tr88;
	goto tr46;
case 20:
	switch( (*p) ) {
		case 46: goto tr91;
		case 48: goto tr92;
	}
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr93;
	goto tr1;
case 21:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr94;
	goto tr1;
case 148:
	switch( (*p) ) {
		case 32: goto tr451;
		case 47: goto tr452;
		case 100: goto tr453;
		case 102: goto tr453;
	}
	if ( (*p) > 10 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr94;
	} else if ( (*p) >= 9 )
		goto tr451;
	goto tr443;
case 149:
	switch( (*p) ) {
		case 32: goto tr451;
		case 47: goto tr452;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto tr451;
	goto tr443;
case 150:
	switch( (*p) ) {
		case 32: goto tr454;
		case 46: goto tr91;
		case 47: goto tr455;
		case 120: goto tr456;
	}
	if ( (*p) > 10 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr93;
	} else if ( (*p) >= 9 )
		goto tr454;
	goto tr443;
case 151:
	switch( (*p) ) {
		case 32: goto tr454;
		case 46: goto tr91;
		case 47: goto tr455;
	}
	if ( (*p) > 10 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr93;
	} else if ( (*p) >= 9 )
		goto tr454;
	goto tr443;
case 22:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr95;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr97;
	} else
		goto tr96;
	goto tr1;
case 152:
	switch( (*p) ) {
		case 32: goto tr457;
		case 47: goto tr458;
	}
	if ( (*p) < 48 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr457;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 70 ) {
			if ( 97 <= (*p) && (*p) <= 102 )
				goto tr97;
		} else if ( (*p) >= 65 )
			goto tr96;
	} else
		goto tr95;
	goto tr443;
case 23:
	if ( (*p) == 47 )
		goto tr98;
	goto tr1;
case 153:
	switch( (*p) ) {
		case 32: goto tr447;
		case 47: goto tr448;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
